<resources>
    <string name="app_name">The Games Store</string>
    <string name="login_register">Login/Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="register_account">Don\'t have an account? Register</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_account">Already have an account? Login</string>
    <string name="retype_password">Retype Password</string>
    <string name="invalid_credentials">Invalid credentials entered. Please try again..</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="seller_location">Seller Location</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_count">40 Users</string>
    <string name="users_happy_count">30 Happy Users</string>
    <string name="products_sold_count">20 Products Sold</string>
    <string name="users">Users</string>
    <string name="happy_users">Happy Users</string>
    <string name="products_sold">Products Sold</string>
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Type</string>
    <string name="product_price">$xx</string>
    <string name="product_discount">- $xx</string>
    <string name="seller_name">Seller Name</string>
    <string name="seller_address">Seller Address</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
</resources>
