<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
    <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_important_devices_black_24dp"
            android:title="@string/products"/>
    <item
            android:id="@+id/nav_seller_location"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:title="@string/seller_location"/>
    <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
    <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout"/>

</menu>
