<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_important_devices_black_24dp" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/productName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp" />

                <TextView
                        android:id="@+id/productType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_type"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:textColor="@color/colorTextSecondary"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp" />

                <TextView
                        android:id="@+id/sellerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seller_name"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="16dp" />

            </LinearLayout>

            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/productPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:layout_centerHorizontal="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:id="@+id/productDiscounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/productPrice"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="8dp"
                        android:text="@string/product_discount"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>