<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_background"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/titleImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:padding="16dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleImage"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/primary_text_dark"
                android:text="@string/login"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_marginRight="24dp" />

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp">

        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/edittext_background"
                android:elevation="5dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/edittext_background"
                android:elevation="5dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/username"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

        <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_below="@+id/password"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>

        <TextView
                android:id="@+id/incorrectCredentials"
                android:layout_below="@+id/forgotPassword"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginTop="8dp"
                android:text="@string/invalid_credentials"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_below="@+id/incorrectCredentials"
                android:text="@string/login"
                android:fontFamily="casual"
                android:elevation="10dp"
                android:textStyle="bold"
                android:textColor="@android:color/primary_text_dark"
                android:background="@drawable/button_background"/>

        <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="57dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

    </RelativeLayout>

</LinearLayout>