<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_background"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/titleImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:padding="16dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleImage"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/primary_text_dark"
                android:text="@string/register"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_marginRight="24dp" />

    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:scrollbars="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp">

            <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/edittext_background"
                    android:elevation="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/full_name"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"/>

            <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/edittext_background"
                    android:elevation="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:drawableLeft="@drawable/ic_mail_black_24dp"
                    android:drawablePadding="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/username"
                    android:layout_below="@+id/name"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"/>

            <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/edittext_background"
                    android:elevation="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/username"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/edittext_background"
                    android:elevation="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/phoneNumber"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />

            <EditText
                    android:id="@+id/retypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/edittext_background"
                    android:elevation="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/password"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_below="@+id/retypePassword"
                    android:text="@string/register"
                    android:fontFamily="casual"
                    android:elevation="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/primary_text_dark"
                    android:background="@drawable/button_background"/>

            <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_account"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_below="@+id/register"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>