<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".DashboardFragment">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/app_bar_menu_driven"
            tools:context=".MenuDrivenActivity">

        <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="56dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pager">

            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/happy_users"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:background="@drawable/text_view_background" />

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/users"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:textColor="@android:color/primary_text_dark"
                    android:background="@drawable/text_view_background_dark" />

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/products_sold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:textColor="@android:color/primary_text_dark"
                    android:background="@drawable/text_view_background_dark" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>