<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
            android:id="@+id/sellerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seller_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="casual"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

    <TextView
            android:id="@+id/sellerAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seller_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/colorTextSecondary"
            android:fontFamily="casual"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/sellerName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

    <fragment
            android:id="@+id/mapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            app:layout_constraintTop_toBottomOf="@+id/sellerAddress"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/linearLayout">

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:textColor="@android:color/primary_text_dark"
                android:text="@string/ok"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>